feat: обобщить маркет для всех категорий
